--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -7,3 +7,6 @@ spring:
           search-paths: springCloud                              # git仓库地址下的相对地址，可以配置多个，用,分割。
           username: xiedang                                      # git仓库的账号
           password: xie19940306                                  # git仓库的密码
+var:
+  temp:
+   username : ls
